[package]
name = "advancedresearch-hypo"
version = "0.2.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["hypothesis", "automatic", "testing", "advancedresearch"]
description = "Automatic hypothesis testing"
license = "MIT"
repository = "https://github.com/advancedresearch/hypo.git"
homepage = "https://github.com/advancedresearch/hypo"
documentation = "https://docs.rs/advancedresearch-hypo"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hypo"

[dependencies]
